# lidar_alignment

./: .gitignore  CMakeLists.txt  README.md  package.xml  requirements.txt  setup.md
config/: params.yaml
launch/: align.launch
scripts/: USAGE.md  alignment_core.py  alignment_node.py  diagnose_alignment.py  diagnosis.py  level.py  p.py  prepare_reference.py  requirements.txt  ros_cloud_utils.py  test.py  visualize.py  viz_test.py
scripts/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  multibag_mapping-checkpoint.ipynb  multibag_mapping_updated-checkpoint.ipynb  multibag_mapping_updated__1__1-checkpoint.ipynb
scripts/~catkin_ws/maps/: reference_prepared.pcd
